// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest: TmCanvasDesktop (Snapshot) 1`] = `
<TmCanvasDesktop
  changeMessagePanelHeight={[Function]}
  match={
    Object {
      "params": Object {
        "id": 0,
      },
    }
  }
  messagePanelHeight={0}
/>
`;

exports[`Jest: TmCanvasPhone (Snapshot) 1`] = `
<TmCanvasPhone
  changeMessagePanelHeight={[Function]}
  match={
    Object {
      "params": Object {
        "id": 0,
      },
    }
  }
  messagePanelHeight={0}
/>
`;
